--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     restart: on-failure
     environment:
       ELECTRUM_HIDDEN_SERVICE: "somehiddenserviceurl.onion"
-      ELECTRUM_LOCAL_SERVICE: "somelocalservice.umbrel.local"
+      ELECTRUM_LOCAL_SERVICE: "umbrel.local"
       ELECTRUM_HOST: electrumx
       BITCOIN_HOST: bitcoind
       RPC_USER: umbrel
-      RPC_PASSWORD: 2hmQlIgYfjFoMGAwBQPdvpJ6vDuQbOoBfG_LxznanAk=
+      RPC_PASSWORD: moneyprintergobrrr
     ports:
       - "3007:3007"
   electrumx:
@@ -22,21 +22,19 @@ services:
     image: lukechilds/electrumx:v1.16.0@sha256:2949784536f8f85af229004e12e5b5c3a1d7428918a492f77b4e958035c2ae2a
     init: true
     environment:
-      DAEMON_URL: http://umbrel:2hmQlIgYfjFoMGAwBQPdvpJ6vDuQbOoBfG_LxznanAk=@172.20.0.2:18443
+      DAEMON_URL: http://umbrel:moneyprintergobrrr@bitcoind:18443
       COIN: BitcoinSegwit
       NET: regtest
     volumes:
-      - ${PWD}/data/electrum:/data
-    restart: always
+      - ${PWD}/data/electrumx:/data
+    restart: on-failure
     ports:
       - "50001:50001"
-  # Uncomment for testing
   bitcoind:
     image: lncm/bitcoind:v22.0@sha256:37a1adb29b3abc9f972f0d981f45e41e5fca2e22816a023faa9fdc0084aa4507
-    command: -regtest -rpcbind=0.0.0.0 -rpcallowip=0.0.0.0/0
+    command: -regtest -rpcbind=0.0.0.0 -rpcallowip=0.0.0.0/0 -rpcauth=umbrel:5071d8b3ba93e53e414446ff9f1b7d7b$$375e9731abd2cd2c2c44d2327ec19f4f2644256fdeaf4fc5229bf98b778aafec
     volumes:
       - ${PWD}/data/bitcoin:/data/.bitcoin
     restart: on-failure
     ports:
       - "18443:18443" # regtest
-      # - "18332:18332" # testnet
