--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.3.29",
   "private": true,
   "scripts": {
-    "serve": "VUE_APP_API_URL=http://localhost:3007 vue-cli-service serve",
-    "build": "VUE_APP_API_URL=http://localhost:3007 vue-cli-service build --mode production",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
